	  (purge_missing): Check that the database exists before starting.
	* src/mandb.c (process_manpath): New function, split out from main.
	  Make the single_filename check aware that the file might be in a
	  per-locale subdirectory that we aren't processing right now.
	  (main): Use it. Move man_owner, purged, and strays to file scope.
	  Build databases for all per-locale subdirectories.
	* src/straycats.c (straycats): Constify manpath argument.
	* include/manconfig.h.in (straycats): Update prototype.
	* docs/TODO: Update.

Fri Aug 31 04:54:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_free): Call pipeline_wait if the pipeline
	  is still running.
	* lib/pipeline.h (pipeline_free): Document that this may happen.

Fri Aug 31 04:46:04 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/zsoelim.l (main): Call pipeline_install_sigchld.

Wed Aug 29 17:12:52 BST 2007  Lars Wirzenius  <liw@iki.fi>

	* po/fi.po: Adjust translation of "No manual entry for %s" (Debian
	  bug #320108).

Wed Aug 29 15:22:54 BST 2007  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Wed Aug 29 15:18:34 BST 2007  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Update from Translation Project.

Wed Aug 29 12:07:38 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Reorganise slightly. Document mandb --quiet fixes.

Wed Aug 29 11:57:59 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add an option to apropos to display only items matching all keywords
	(thanks, Alfie Costa; Debian bug #259340).

	* src/whatis.c (args, long_options, main): New -a/--and option for
	  apropos.
	  (usage): Document it.
	  (apropos): Store a count of how many times each item has been seen
	  in the hashtable. If --and was given, only display an item if its
	  count equals the number of supplied keywords.
	  (main): Store the number of supplied keywords. Adjust hash free
	  function.