@@ -8,6 +8,10 @@
 	  per-locale subdirectory that we aren't processing right now.
 	  (main): Use it. Move man_owner, purged, and strays to file scope.
 	  Build databases for all per-locale subdirectories.
+	* src/manp.c (check_and_add): New function.
+	  (add_nls_manpath): Use check_and_add to reduce repetition. When
+	  processing ll_CC.CODESET, try ll.CODESET after ll_CC.CODESET and
+	  ll_CC but before ll.
 	* src/straycats.c (straycats): Constify manpath argument.
 	* include/manconfig.h.in (straycats): Update prototype.
 	* docs/TODO: Update.
